add endps for type and plan
